--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "vue": "^2.6.6",
-    "vue-tables-2": "^1.4.70"
+    "vue-tables-2": "^1.4.70",
+    "vuex": "latest"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
