--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.0-rc.14",
+    "mini-linq-js": "^1.3.2",
     "vue": "^2.6.6",
+    "vue-router": "^3.0.2",
     "vue-tables-2": "^1.4.70",
     "vuex": "latest"
   },
