--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.14",
+    "fingerprintjs": "^0.5.3",
     "mini-linq-js": "^1.3.2",
     "vue": "^2.6.6",
     "vue-router": "^3.0.2",
